# telegramBot

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  telegramBot.pro
